added remove from cart - update bout us

--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -213,4 +213,21 @@ a {
       height: 100%;
       }
       }
+
+
+      /* register */
+
+      $whiteBG: white;
+
+      $Height100: "100%";
+
+      .section {
+        background-color: $whiteBG;
+        height: $Height100;
+      }
+
+      .Rcontainer {
+        height: $Height100;
+        
+      }
   
